--- a/CSS/grid.css
+++ b/CSS/grid.css
@@ -14,6 +14,10 @@ h4 {
 
 /*General*/
 
+body {
+    color:#353535;
+}
+
 video::-webkit-media-controls {
     display:none !important;
 }
@@ -92,6 +96,10 @@ li#nav-three {
     top: 18px;
     right: 3px;
     width: 50px!important;
+}
+
+#nav-three a {
+    color:#353535 !important;
 }
 
 #letter-contact {
